[gd_scene load_steps=59 format=3 uid="uid://cu8n4swsywvgl"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_jttq3"]
[ext_resource type="Texture2D" uid="uid://dyf86g2a5rxf2" path="res://Visual/Character Sheets/Jeff.png" id="2_50pkq"]
[ext_resource type="AudioStream" uid="uid://chl20hkpmqmsa" path="res://Audio/BGM/Capybara_Hero_Day.mp3" id="3_yhhd0"]
[ext_resource type="FontFile" uid="uid://d368qtebrp6kk" path="res://Visual/Bitmap_Blackletter_12x17_V1.0.ttf" id="4_q8biw"]
[ext_resource type="Texture2D" uid="uid://biwond464pw3f" path="res://Visual/Tiles/tiles_packed.png" id="4_y1du1"]
[ext_resource type="AudioStream" uid="uid://by3gunoauxk8h" path="res://Audio/SFX/Coin.ogg" id="5_8g437"]
[ext_resource type="AudioStream" uid="uid://i1a7j27l8eli" path="res://Audio/SFX/Jump.ogg" id="5_frqrc"]
[ext_resource type="AudioStream" uid="uid://cxk0b0edapmpa" path="res://Audio/BGM/Capybara_Hero_Dusk.mp3" id="5_hp8ls"]
[ext_resource type="AudioStream" uid="uid://cjbpd5j1ysurm" path="res://Audio/BGM/Capybara_Hero_Night.mp3" id="6_4pm28"]
[ext_resource type="AudioStream" uid="uid://dewy71kl7f0o0" path="res://Audio/SFX/Hit.ogg" id="6_6c6cw"]
[ext_resource type="AudioStream" uid="uid://bd00e7pbtb6ru" path="res://Audio/BGM/Capybara_Hero_Dawn.mp3" id="6_bw0rk"]
[ext_resource type="AudioStream" uid="uid://bjvflyai2262b" path="res://Audio/SFX/Gem.ogg" id="6_di5hj"]
[ext_resource type="AudioStream" uid="uid://dyi76auvxsebt" path="res://Audio/BGM/Capybara_Hero_Twilight.mp3" id="7_ho27q"]
[ext_resource type="AudioStream" uid="uid://b043lrdgoxcw3" path="res://Audio/BGM/Capybara_Hero_GameOver.mp3" id="7_vgp3a"]
[ext_resource type="FontFile" uid="uid://34x2wk5x3d5j" path="res://Visual/LowGothic_8x10_Regular.ttf" id="11_4t0rh"]
[ext_resource type="AudioStream" uid="uid://bc4xyuk4s6ckc" path="res://Audio/SFX/Step.ogg" id="13_ly6jw"]
[ext_resource type="Script" path="res://Scripts/HeartL.gd" id="14_w5qwq"]
[ext_resource type="Script" path="res://Scripts/HeartM.gd" id="15_5rtlp"]
[ext_resource type="Script" path="res://Scripts/HeartR.gd" id="16_75e8u"]
[ext_resource type="Script" path="res://Scripts/Bag.gd" id="16_knqgv"]
[ext_resource type="Texture2D" uid="uid://nx3h4x5k022e" path="res://Visual/Assets/Inventory.png" id="20_tvplo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qxtkr"]
atlas = ExtResource("2_50pkq")
region = Rect2(304, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1aw0"]
atlas = ExtResource("2_50pkq")
region = Rect2(320, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nei2l"]
atlas = ExtResource("2_50pkq")
region = Rect2(336, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0og5"]
atlas = ExtResource("2_50pkq")
region = Rect2(352, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5jpc"]
atlas = ExtResource("2_50pkq")
region = Rect2(448, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhi3w"]
atlas = ExtResource("2_50pkq")
region = Rect2(352, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxm6t"]
atlas = ExtResource("2_50pkq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7iuf"]
atlas = ExtResource("2_50pkq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nflf7"]
atlas = ExtResource("2_50pkq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuvba"]
atlas = ExtResource("2_50pkq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_50wod"]
atlas = ExtResource("2_50pkq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0nrs"]
atlas = ExtResource("2_50pkq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl42k"]
atlas = ExtResource("2_50pkq")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obqmm"]
atlas = ExtResource("2_50pkq")
region = Rect2(272, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvt5l"]
atlas = ExtResource("2_50pkq")
region = Rect2(288, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwbnp"]
atlas = ExtResource("2_50pkq")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uslan"]
atlas = ExtResource("2_50pkq")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4iyo"]
atlas = ExtResource("2_50pkq")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma2mo"]
atlas = ExtResource("2_50pkq")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuxxy"]
atlas = ExtResource("2_50pkq")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqv3"]
atlas = ExtResource("2_50pkq")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y27n"]
atlas = ExtResource("2_50pkq")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jbj8"]
atlas = ExtResource("2_50pkq")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rt4k"]
atlas = ExtResource("2_50pkq")
region = Rect2(240, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnt8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxtkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1aw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nei2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0og5")
}],
"loop": true,
"name": &"climb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5jpc")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhi3w")
}],
"loop": true,
"name": &"hang",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxm6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7iuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nflf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuvba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50wod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0nrs")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl42k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obqmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvt5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obqmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl42k")
}],
"loop": false,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwbnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uslan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4iyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma2mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuxxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y27n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jbj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rt4k")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyt60"]
size = Vector2(12, 14)

[sub_resource type="LabelSettings" id="LabelSettings_rn25h"]
font = ExtResource("11_4t0rh")
font_size = 40
font_color = Color(1, 0.858824, 0.427451, 1)
outline_size = 5
outline_color = Color(0.266667, 0.235294, 0.0745098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aiq3j"]
font = ExtResource("11_4t0rh")
font_size = 24
font_color = Color(1, 0.858824, 0.427451, 1)
outline_size = 3
outline_color = Color(0.266667, 0.235294, 0.0745098, 1)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_tj7o0"]
font = ExtResource("4_q8biw")
font_size = 36
font_color = Color(0.760784, 0.611765, 0, 1)
outline_size = 15
outline_color = Color(0.266667, 0.235294, 0.0745098, 1)
shadow_size = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_35x46"]
atlas = ExtResource("4_y1du1")
region = Rect2(108, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_obiyx"]
atlas = ExtResource("4_y1du1")
region = Rect2(72, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgpm2"]
atlas = ExtResource("4_y1du1")
region = Rect2(90, 36, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_81jyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35x46")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obiyx")
}],
"loop": true,
"name": &"Full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgpm2")
}],
"loop": true,
"name": &"Half",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kux6f"]
atlas = ExtResource("4_y1du1")
region = Rect2(126, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqtdk"]
atlas = ExtResource("4_y1du1")
region = Rect2(126, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mc8f"]
atlas = ExtResource("4_y1du1")
region = Rect2(126, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5y0"]
atlas = ExtResource("4_y1du1")
region = Rect2(126, 18, 18, 18)

[node name="Jeff" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -7)
script = ExtResource("1_jttq3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wnt8c")
animation = &"jump"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="BGM" type="Node2D" parent="."]

[node name="DayBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("3_yhhd0")

[node name="DuskBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("5_hp8ls")

[node name="NightBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("6_4pm28")

[node name="DawnBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("6_bw0rk")

[node name="TwilightBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("7_ho27q")

[node name="GameOverBGM" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("7_vgp3a")

[node name="SFX" type="Node2D" parent="."]

[node name="CoinSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_8g437")
volume_db = -12.0

[node name="GemSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_di5hj")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_frqrc")
volume_db = -6.0

[node name="HitSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_6c6cw")

[node name="WalkSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("13_ly6jw")
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wyt60")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreText" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 184.0
offset_bottom = 58.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_rn25h")

[node name="TimeText" type="Label" parent="UI"]
offset_left = 864.0
offset_top = 16.0
offset_right = 1140.0
offset_bottom = 58.0
text = "Time:"
label_settings = SubResource("LabelSettings_aiq3j")
horizontal_alignment = 2

[node name="Minutes" type="Label" parent="UI/TimeText"]
layout_mode = 0
offset_left = -77.0
offset_top = 26.0
offset_right = 199.0
offset_bottom = 68.0
text = "00:"
label_settings = SubResource("LabelSettings_aiq3j")
horizontal_alignment = 2

[node name="Seconds" type="Label" parent="UI/TimeText"]
layout_mode = 0
offset_left = -42.0
offset_top = 26.0
offset_right = 234.0
offset_bottom = 68.0
text = "00:"
label_settings = SubResource("LabelSettings_aiq3j")
horizontal_alignment = 2

[node name="Milliseconds" type="Label" parent="UI/TimeText"]
layout_mode = 0
offset_top = 26.0
offset_right = 276.0
offset_bottom = 68.0
text = "000"
label_settings = SubResource("LabelSettings_aiq3j")
horizontal_alignment = 2

[node name="GameOverText" type="Label" parent="UI"]
visible = false
offset_left = 160.0
offset_top = 160.0
offset_right = 1012.0
offset_bottom = 544.0
text = "JEFF HAS FALLEN!!


Press Jump to Retry
From Checkpoint"
label_settings = SubResource("LabelSettings_tj7o0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HeartL" type="AnimatedSprite2D" parent="UI"]
position = Vector2(504, 37)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_81jyt")
animation = &"Full"
script = ExtResource("14_w5qwq")

[node name="HeartM" type="AnimatedSprite2D" parent="UI"]
position = Vector2(576, 37)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_81jyt")
animation = &"Full"
script = ExtResource("15_5rtlp")

[node name="HeartR" type="AnimatedSprite2D" parent="UI"]
position = Vector2(648, 37)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_81jyt")
animation = &"Full"
script = ExtResource("16_75e8u")

[node name="Bag" type="Node2D" parent="UI"]
script = ExtResource("16_knqgv")

[node name="BagSprite" type="Sprite2D" parent="UI/Bag"]
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(576, 584)
scale = Vector2(3, 3)
texture = ExtResource("20_tvplo")

[node name="Inv0" type="Sprite2D" parent="UI/Bag"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(455, 584)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_kux6f")

[node name="Inv1" type="Sprite2D" parent="UI/Bag"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(536, 584)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_tqtdk")

[node name="Inv2" type="Sprite2D" parent="UI/Bag"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(616, 584)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_3mc8f")

[node name="Inv3" type="Sprite2D" parent="UI/Bag"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(698, 584)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_jm5y0")
